tests/out2.txt
[dotenv@17.3.1] injecting env (32) from ..\.env -- tip: 🔐 prevent committing .env to code: https://dotenvx.com/precommit
Error: Playwright Test did not expect test() to be called here.
Most common reasons include:
- You are calling test() in a configuration file.
- You are calling test() in a file that is imported by the configuration file.
- You have two different versions of @playwright/test. This usually happens
  when one of the dependencies in your package.json depends on @playwright/test.

   at global.setup.ts:7

   5 | const authFile = path.resolve(__dirname, '.auth/user.json');
   6 |
>  7 | setup('authenticate via UI', async ({ page }) => {
     |      ^
   8 |     // Ensure the auth directory exists
   9 |     const dir = path.dirname(authFile);
  10 |     if (!fs.existsSync(dir)) fs.mkdirSync(dir, { recursive: true });
    at TestTypeImpl._currentSuite (C:\Users\keina\OneDrive\Documents\GitHub\Automation Projects\agnox\node_modules\playwright\lib\common\testType.js:75:13)
    at TestTypeImpl._createTest (C:\Users\keina\OneDrive\Documents\GitHub\Automation Projects\agnox\node_modules\playwright\lib\common\testType.js:88:24)
    at C:\Users\keina\OneDrive\Documents\GitHub\Automation Projects\agnox\node_modules\playwright\lib\transform\transform.js:275:12
    at Object.<anonymous> (C:\Users\keina\OneDrive\Documents\GitHub\Automation Projects\agnox\tests\global.setup.ts:7:6)
Error: Playwright Test did not expect test.describe() to be called here.
Most common reasons include:
- You are calling test.describe() in a configuration file.
- You are calling test.describe() in a file that is imported by the configuration file.
- You have two different versions of @playwright/test. This usually happens
  when one of the dependencies in your package.json depends on @playwright/test.

   at specs\execution-drawer.spec.ts:4

  2 | import { TEST_EXECUTION_ID, baseExecutionMock } from '../utils/mockData';
  3 |
> 4 | test.describe('Suite C — AI Analysis & Triage (AI-Native Scaffold)', () => {
    |      ^
  5 |     test('C-008: AI Analysis Tab Is Hidden in UI on ERROR Status', async ({ drawerLocators, drawerActions, drawerMocks }) => {
  6 |         const executionMock = { 
  7 |             ...baseExecutionMock, 
    at TestTypeImpl._currentSuite (C:\Users\keina\OneDrive\Documents\GitHub\Automation Projects\agnox\node_modules\playwright\lib\common\testType.js:75:13)
    at TestTypeImpl._describe (C:\Users\keina\OneDrive\Documents\GitHub\Automation Projects\agnox\node_modules\playwright\lib\common\testType.js:115:24)
    at Function.describe (C:\Users\keina\OneDrive\Documents\GitHub\Automation Projects\agnox\node_modules\playwright\lib\transform\transform.js:275:12)
    at Object.<anonymous> (C:\Users\keina\OneDrive\Documents\GitHub\Automation Projects\agnox\tests\specs\execution-drawer.spec.ts:4:6)
Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.


To open last HTML report run:
[36m[39m
[36m  npx playwright show-report ..\playwright-report[39m
[36m[39m
